<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/change_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/border_box"
        android:text="User: "
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/oldPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/border_box"
        android:layout_marginTop="15dp"
        android:minWidth="200dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_box"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:minWidth="200dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/oldPass"
        app:layout_constraintTop_toBottomOf="@+id/oldPass" />

    <Button
        android:id="@+id/cancelChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/newPass"
        app:layout_constraintTop_toBottomOf="@+id/newPass" />

    <Button
        android:id="@+id/okChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@android:string/ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/cancelChangePass"
        app:layout_constraintTop_toTopOf="@+id/cancelChangePass" />

    <TextView
        android:id="@+id/errorChangePass"
        android:layout_width="wrap_content"
        android:textColor="@color/errorColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/newPass"
        app:layout_constraintTop_toBottomOf="@+id/newPass" />
</androidx.constraintlayout.widget.ConstraintLayout>