<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/server_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud"
        app:tint="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/serverDown"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/server_down"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/retry"
        app:layout_constraintEnd_toEndOf="@+id/serverDown"
        app:layout_constraintTop_toTopOf="@+id/changeIP" />

    <Button
        android:id="@+id/changeIP"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/change_ip"
        app:layout_constraintStart_toStartOf="@+id/serverDown"
        app:layout_constraintTop_toBottomOf="@+id/serverDown" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/retryButton"
        app:layout_constraintStart_toEndOf="@+id/changeIP"
        app:layout_constraintTop_toBottomOf="@+id/changeIP"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>