<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:background="@drawable/border_box"
        android:id="@+id/toOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:isScrollContainer="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/addProductEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/addProductEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/border_box"
        android:ems="10"
        android:hint="@string/addProductHint"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toOrder"
        app:layout_constraintStart_toStartOf="@+id/toOrder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ListView
        android:background="@drawable/border_box"
        android:id="@+id/toChoose"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="15dp"
        android:text="@string/product_choose"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/toOrder"
        app:layout_constraintTop_toBottomOf="@+id/addProductEditText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/chosen_product"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:outlineSpotShadowColor="@color/colorPrimaryDark"
        app:borderWidth="0dp"
        app:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/send"
        tools:targetApi="p" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        app:maxImageSize="35dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/eye" />
</androidx.constraintlayout.widget.ConstraintLayout>